# ws23-youbot-manipulation-ros2

./: README.md
.history/mir_youbot_manipulation/src/: main_20231027161029.cpp  main_20231103141945.cpp
brics_actuator/: CMakeLists.txt  README.md  package.xml
brics_actuator/msg/: CartesianPose.msg  CartesianTwist.msg  CartesianWrench.msg  JointAccelerations.msg  JointImpedances.msg  JointPositions.msg  JointTorques.msg  JointValue.msg  JointVelocities.msg
mir_youbot_manipulation/: CMakeLists.txt  package.xml
mir_youbot_manipulation/config/: joint_limits.yaml  youbot-manipulator.cfg
mir_youbot_manipulation/include/: youbot_manipulation.hpp
mir_youbot_manipulation/include/mir_youbot_manipulation/: youbot_manipulation.hpp  youbot_manipulation_node.hpp
mir_youbot_manipulation/launch/: mir_youbot_manipulation.launch.py
mir_youbot_manipulation/src/: main.cpp  test  velocityprofilegraphs.cpp  youbot_manipulation.cpp  youbot_manipulation_node.cpp
youbot_description/launch/: youbot_description.launch.py
youbot_description/urdf/: youbot_base.urdf
youbot_driver/: CMakeLists.txt  README.md  package.xml
youbot_driver/config/: youbot-ethercat.cfg
youbot_driver/include/youbot_driver/generic/: Logger.hpp
youbot_driver/src/generic/: Logger.cpp
youbot_driver/src/soem/: CMakeLists.txt
youbot_driver_ros_interface/: CMakeLists.txt  README.md  package.xml
youbot_driver_ros_interface/include/youbot_driver_ros_interface/: YouBotConfiguration.h  YouBotOODLWrapper.h  joint_state_observer_oodl.h
youbot_driver_ros_interface/include/youbot_trajectory_action_server/: joint_state_observer.h
youbot_driver_ros_interface/launch/: bringup.launch.py  youbot_driver.launch.py  youbot_driver_dual_arm.launch.py
youbot_driver_ros_interface/src/: YouBotConfiguration.cpp  YouBotOODLWrapper.cpp  joint_state_observer_oodl.cpp  youbot_oodl.cpp
youbot_driver_ros_interface/src/examples/: follow_trajectory_action_client.py  trajectory.json  youbot_2nd_arm_test.cpp  youbot_arm_test.cpp  youbot_arm_vel_test.cpp
