<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brics_actuator</name>
  <description>Message defined in the BRICS project</description>
  <author>Alexander Bubeck</author>
  <maintainer email="nowak@locomotec.com">Walter Nowak</maintainer>
  <license>BSD</license>
  <version>0.7.0</version>
  <url type="website">http://ros.org/wiki/brics_actuator</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

