<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mir_youbot_manipulation</name>
  <version>0.0.0</version>
  <description>Controls the youbot arm</description>
  <maintainer email="chaitanyagumudala961@gmail.com">Chaitanya</maintainer>
  <license>Mozilla</license>

  <buildtool_depend>ament_cmake</buildtool_depend>



  <depend>rclcpp</depend>

  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>youbot_driver</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
