<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>youbot_driver</name>
  <version>1.1.0</version>
  <description>driver for the KUKA youBot robot</description>

  <author email="jan.paulus@h-brs.de">Jan Paulus</author>
  <maintainer email="nowak@locomotec.com">Walter Nowak</maintainer>

  <license>LGPLv2.1, modified BSD</license>

  <url type="website">http://github.com/youbot/youbot_driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>


